# biopac-analyzer

./: .gitignore  AGENTS.md  README.md  app.py  main.py  notes.txt  run.sh  skills-lock.json  vercel.json
.agents/skills/pyside6-reviewer/: SKILL.md  anti-patterns.md  model-view.md  performance.md  qml-integration.md  review.py  signals-slots.md  threading.md  widgets.md
.github/workflows/: desktop-build.yml
analyzer/: ECG_resp.py  HRV 參數.py  HRV_parameters.py  LB-0411-01_pantompkins1985_hrv_features.csv  LB-0411-01_whole_segment_hrv_features.csv  RSA.py  analysis_wrapper.py  desktop_analysis.py  desktop_app.py  desktop_report.py  ecg_hrv_pantompkins_gui.py  pyproject.toml  server.py  test_desktop.py  test_server.py
api/: index.py  requirements.txt
frontend/: components.json  index.html  package.json  pnpm-lock.yaml  skills-lock.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css
frontend/src/components/: BiopacAnalyzer.tsx
frontend/src/components/react/: DiagnosticSummary.tsx  FileUploader.tsx  FrequencySummary.tsx  LoadingState.tsx  MetricCards.tsx  ReportHeader.tsx  SignalBrowser.tsx  SignalChart.tsx  navbar.tsx
frontend/src/lib/: signalProcessor.ts
