[project]
name = "biopac-analyzer"
version = "0.1.0"
description = "Offline PySide6 desktop ECG and HRV analyzer for BIOPAC recordings"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "neurokit2>=0.2.7",
    "pyside6>=6.8.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pyinstaller>=6.11.0",
]
